fixing scrolling on mobile

--- a/multiplayer/public/cursors/style.css
+++ b/multiplayer/public/cursors/style.css
@@ -1,5 +1,12 @@
+html {
+    width: 100%;
+    height: 100%;
+}
+
 body {
-    width: auto;
+    width: 100%;
+    height: 100%;
+    margin: 0;
     background-color: aliceblue;
     overflow: hidden;
     cursor: none;
